srv-4/deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: istio-srv4
  labels:
    app: srv-4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: srv-4
  template:
    metadata:
      labels:
        app: srv-4
        version: v1
    spec:
      containers:
      - name: istio-srv4
        image: requena/istio-srv4:1.0
        ports:
          - containerPort: 5003
