srv-4/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: srv-4
spec:
  selector:
    app: srv-4
  ports:
  - port: 5003
    name: http
