srv-4/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: srv-4
spec:
  hosts:
  - srv-4
  http:
  - route:
    - destination:
        host: srv-4
